--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,7 @@
       <header>
         <h1 id="title">SWIFT CUSTOMER RESPONSE SURVEY</h1>
         <p id="description" >
-          We appreciate  you taking this survey.Your response  is valued
+          We appreciate  you taking this survey. Your response  is valued
         </p>
       </header>
       <form id="survey-form">
@@ -20,7 +20,6 @@
             name="name"
             id="name"
             placeholder="Name"
-
             required
           />
         </div>
@@ -32,7 +31,7 @@
             id="email"
             required
             placeholder="Email"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
           />
         </div>
         <div>
@@ -46,7 +45,6 @@
             placeholder="Number"
             min="10"
             max="99"
-            
             placeholder="number"
           />
         </div>
